--- a/index.html
+++ b/index.html
@@ -94,8 +94,8 @@
                                     <div class="col-md-6">
                                         <div class="detail-box">
                                             <h1>
-                                                Github<br />
-                                                Pages
+                                                Github Page by
+                                                Dennis Sabu
                                             </h1>
                                             <p>
                                                 Hosting your first GitHub web
